RESOLVED FIXED37168
[chromium] Linux: respect the scale factor during printing
https://bugs.webkit.org/show_bug.cgi?id=37168
Summary [chromium] Linux: respect the scale factor during printing
Attachments
try1 (1.78 KB, patch)
2010-04-06 13:49 PDT, Evan Stade
no flags
update changelog (1.91 KB, patch)
2010-04-09 15:21 PDT, Evan Stade
no flags
Evan Stade
Comment 1 2010-04-06 13:49:14 PDT
Evan Martin
Comment 2 2010-04-06 13:55:04 PDT
ChangeLog should mention if it's covered by tests or what new tests cover it.
Evan Stade
Comment 3 2010-04-06 14:03:25 PDT
I don't know if we have the infrastructure for running printing tests on chromium. From test_expectations.txt: // These tests try to print a PDF file as the expected result. I don't think // we plan on supporting this anytime soon. WONTFIX SKIP : printing/media-queries-print.html = PASS WONTFIX SKIP : printing/compositing-layer-printing.html = PASS
Eric Seidel (no email)
Comment 4 2010-04-06 18:59:53 PDT
No one runs those printing tests, sadly. PDFs are not portable. Some folks in the TKO office were working on printing support though.
Evan Stade
Comment 5 2010-04-08 13:36:22 PDT
+darin, levin need this for mstone 5.
Evan Stade
Comment 6 2010-04-09 15:21:37 PDT
Created attachment 53000 [details] update changelog updated changelog to explain test situation.
Eric Seidel (no email)
Comment 7 2010-04-09 15:23:21 PDT
Comment on attachment 53000 [details] update changelog Well, there are other ways than pdfs these days. But OK. You should be sure to notify the TKO folks and perhaps they can help you come up with a test after the fact.
Shinichiro Hamaji
Comment 8 2010-04-09 15:45:07 PDT
> Well, there are other ways than pdfs these days. But OK. You should be sure > to notify the TKO folks and perhaps they can help you come up with a test after > the fact. I think we cannot test this for now. Once I finish Bug 37203 and Bug 20011, this patch should be able to be tested by image diff. I'll add a test case for this patch, so please wait for a while. When I post a patch to test this change, I'll CC Evan to make sure the test is suitable for this issue.
Evan Stade
Comment 9 2010-04-09 15:49:03 PDT
thanks a ton :)
WebKit Commit Bot
Comment 10 2010-04-09 19:50:11 PDT
Comment on attachment 53000 [details] update changelog Clearing flags on attachment: 53000 Committed r57402: <http://trac.webkit.org/changeset/57402>
WebKit Commit Bot
Comment 11 2010-04-09 19:50:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.