2010-04-09  Evan Stade  <estade@chromium.org>

Reviewed by Eric Seidel.

        [chromium] Linux: respect the scale factor during printing
        https://bugs.webkit.org/show_bug.cgi?id=37168

        Chromium doesn't support testing .pdfs from printing at the moment, so
        this change is not covered by any tests.

        * src/WebFrameImpl.cpp:
        (WebKit::ChromePrintContext::spoolPage):

Canonical link: https://commits.webkit.org/48691@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57402 268f45cc-cd09-0410-ab3c-d52691b4dbfc